--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- link to bootstrap -->
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css"/>
+    <!-- own css -->
     <link rel="stylesheet" type="text/css" href="style.css" />
     <title>Document</title>
 </head>
@@ -19,5 +23,7 @@
     <footer>
         <p>&copy; 2020</p>
     </footer>
+
+    <script src="js/bootstrap.min.js"></script>
 </body>
 </html>
