Added hero carousel and youtube video
Copied carousel code from Bootstrap.
Cut and pasted embed code from youtube.

--- a/index.html
+++ b/index.html
@@ -12,10 +12,36 @@
 </head>
 <body>
     <header>
-        <h1>Bootstrap Example</h1>
+        <h1>Visit Malaysian Coral Reefs</h1>
+
+        <!-- carousel code from getbootstrap.com/docs/5.0/components/carousel -->
+        <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="assets/coral.jpg" class="d-block w-100" alt="Some coral">
+              </div>
+              <div class="carousel-item">
+                <img src="assets/coral2.jpg" class="d-block w-100" alt="Some colourful coral">
+              </div>
+              <div class="carousel-item">
+                <img src="assets/fish3.jpg" class="d-block w-100" alt="Some fish">
+              </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </a>
+          </div>
     </header>
     <main>
-        <p>Install boostrap on this page</p>
+        <p>Install bootstrap on this page</p>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/ZJy2r7MYyGM" 
+        frameborder="0" allow="accelerometer; autoplay; clipboard-write; 
+        encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </main>
     <aside>
         <p>Sidebar Content</p>
