Added some content
Mostly lorem ipsum.

--- a/index.html
+++ b/index.html
@@ -38,13 +38,33 @@
           </div>
     </header>
     <main>
-        <p>Install bootstrap on this page</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+            Quia laudantium distinctio, quod illum, deserunt nostrum modi, 
+            eum assumenda aperiam non obcaecati? Ea minima asperiores 
+            unde inventore eveniet optio, quisquam maiores?</p>
+
         <iframe width="560" height="315" src="https://www.youtube.com/embed/ZJy2r7MYyGM" 
         frameborder="0" allow="accelerometer; autoplay; clipboard-write; 
         encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Suscipit ipsa, 
+            laboriosam quos sunt rerum totam cumque provident, unde asperiores 
+            maiores, aut vero temporibus velit ex eum. Expedita veniam eligendi 
+            sed.</p>
+
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facilis illo 
+            explicabo sapiente, iusto quae, provident dolore vero maxime quia ipsam 
+            or cum laudantium nihil nisi, esse similique ut blanditiis sit?</p>
     </main>
     <aside>
-        <p>Sidebar Content</p>
+        <p><strong>Next Departure Dates</strong><p>
+            <ul>
+                <li>26th February 2021</li>
+                <li>13th March 2021</li>
+                <li>27th March 2021</li>
+                <li>10th April 2021</li>
+            </ul>
+        
     </aside>
     <footer>
         <p>&copy; 2020</p>
