--- a/index.html
+++ b/index.html
@@ -13,8 +13,17 @@
     <title>Visit Malaysian Coral Reefs</title>
 </head>
 <body>
-    <header class="p-30 pb-5">
-        <h1 class="pb-2 pt-2 text-center">Visit Malaysian Coral Reefs</h1>
+    <header class="p-4 pb-5">
+        <div class="d-flex align-items-center pb-4">
+            <a href="#" class="text-decoration-none border border-info 
+                                    border-5 rounded-circle ms-4 px-4 py-4
+                                        text-center bg-info bg-gradient">
+                <div class="fs-3  text-black-50">
+                        Explore<br>Adventures
+                </div>
+            </a>
+            <h1 class="flex-fill text-center me-3">Visit Malaysian Coral Reefs</h1>
+        </div>
         <div class="container-fluid">
         <!-- carousel code from getbootstrap.com/docs/5.0/components/carousel -->
             <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
